--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
 		"gatsby-plugin-catch-links": "^3.0.0",
 		"gatsby-plugin-emotion": "^6.0.0",
 		"gatsby-plugin-feed": "^3.0.0",
+		"gatsby-plugin-google-analytics": "^3.14.0",
 		"gatsby-plugin-image": "^1.0.0",
 		"gatsby-plugin-manifest": "^3.0.0",
-		"gatsby-plugin-nprogress": "^3.0.0",
+		"gatsby-plugin-nprogress": "^3.14.0",
 		"gatsby-plugin-offline": "^4.0.0",
 		"gatsby-plugin-react-helmet": "^4.0.0",
+		"gatsby-plugin-scroll-indicator": "^1.0.1",
 		"gatsby-plugin-sharp": "^3.0.0",
 		"gatsby-plugin-typography": "^3.0.0",
 		"gatsby-remark-copy-linked-files": "^3.0.0",
