--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"gatsby-remark-smartypants": "^3.0.0",
 		"gatsby-source-filesystem": "^3.0.0",
 		"gatsby-source-notion-api": "^0.11.0",
+		"gatsby-source-twitter": "^4.0.1",
 		"gatsby-transformer-remark": "^3.0.0",
 		"gatsby-transformer-sharp": "^3.0.0",
 		"prismjs": "^1.23.0",
