--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0",
 		"react-icons": "^4.2.0",
+		"react-twitter-embed": "^4.0.4",
 		"react-typography": "^0.16.19",
 		"typography": "^0.16.19"
 	},
