--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@divyanshu013/media": "^1.0.0",
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
+		"@mdx-js/mdx": "^1.6.22",
+		"@mdx-js/react": "^1.6.22",
 		"emotion-theming": "^11.0.0",
 		"fontsource-cascadia-code": "^4.0.0",
 		"fontsource-open-sans": "^4.0.0",
@@ -22,9 +24,11 @@
 		"gatsby-plugin-catch-links": "^3.0.0",
 		"gatsby-plugin-emotion": "^6.0.0",
 		"gatsby-plugin-feed": "^3.0.0",
+		"gatsby-plugin-feed-mdx": "^1.1.0",
 		"gatsby-plugin-google-analytics": "^3.14.0",
 		"gatsby-plugin-image": "^1.0.0",
 		"gatsby-plugin-manifest": "^3.0.0",
+		"gatsby-plugin-mdx": "^2.14.0",
 		"gatsby-plugin-nprogress": "^3.14.0",
 		"gatsby-plugin-offline": "^4.0.0",
 		"gatsby-plugin-react-helmet": "^4.0.0",
@@ -42,12 +46,14 @@
 		"gatsby-source-twitter": "^4.0.1",
 		"gatsby-transformer-remark": "^3.0.0",
 		"gatsby-transformer-sharp": "^3.0.0",
+		"mdx-embed": "^1.0.0",
 		"prismjs": "^1.23.0",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0",
 		"react-icons": "^4.2.0",
+		"react-tooltip": "^4.2.21",
 		"react-twitter-embed": "^4.0.4",
 		"react-typography": "^0.16.19",
 		"typography": "^0.16.19"
