--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"fontsource-cascadia-code": "^4.0.0",
 		"fontsource-open-sans": "^4.0.0",
 		"fontsource-zilla-slab": "^4.0.0",
-		"gatsby": "^3.0.3",
+		"gatsby": "^3.14.6",
 		"gatsby-image": "^3.0.0",
 		"gatsby-plugin-catch-links": "^3.0.0",
 		"gatsby-plugin-emotion": "^6.0.0",
@@ -28,7 +28,8 @@
 		"gatsby-plugin-google-analytics": "^3.14.0",
 		"gatsby-plugin-image": "^1.0.0",
 		"gatsby-plugin-manifest": "^3.0.0",
-		"gatsby-plugin-mdx": "^2.14.0",
+		"gatsby-plugin-mdx": "^2.13.0",
+		"gatsby-plugin-mdx-embed": "^1.0.0",
 		"gatsby-plugin-nprogress": "^3.14.0",
 		"gatsby-plugin-offline": "^4.0.0",
 		"gatsby-plugin-react-helmet": "^4.0.0",
@@ -46,7 +47,7 @@
 		"gatsby-source-twitter": "^4.0.1",
 		"gatsby-transformer-remark": "^3.0.0",
 		"gatsby-transformer-sharp": "^3.0.0",
-		"mdx-embed": "1.0.0",
+		"mdx-embed": "^1.0.0",
 		"prismjs": "^1.23.0",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
@@ -87,9 +88,5 @@
 		"start": "npm run develop",
 		"serve": "gatsby serve",
 		"test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/dhravya/blog.git"
 	}
 }
