FINALLY FIXED EVERYTHING AAAAAAAAA

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"gatsby-plugin-google-analytics": "^3.14.0",
 		"gatsby-plugin-image": "^1.0.0",
 		"gatsby-plugin-manifest": "^3.0.0",
-		"gatsby-plugin-mdx": "^2.13.0",
+		"gatsby-plugin-mdx": "^1.10.1",
 		"gatsby-plugin-mdx-embed": "^1.0.0",
 		"gatsby-plugin-nprogress": "^3.14.0",
 		"gatsby-plugin-offline": "^4.0.0",
@@ -40,14 +40,15 @@
 		"gatsby-remark-external-links": "^0.0.4",
 		"gatsby-remark-images": "^4.0.0",
 		"gatsby-remark-prismjs": "^4.0.0",
+		"gatsby-remark-reading-time": "^1.1.0",
 		"gatsby-remark-responsive-iframe": "^3.0.0",
 		"gatsby-remark-smartypants": "^3.0.0",
 		"gatsby-source-filesystem": "^3.0.0",
 		"gatsby-source-notion-api": "^0.11.0",
 		"gatsby-source-twitter": "^4.0.1",
-		"gatsby-transformer-remark": "^3.0.0",
 		"gatsby-transformer-sharp": "^3.0.0",
 		"mdx-embed": "^1.0.0",
+		"path": "^0.12.7",
 		"prismjs": "^1.23.0",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
