--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
 		"typography": "^0.16.19"
 	},
 	"devDependencies": {
+		"@types/node": "^17.0.31",
+		"@types/typography": "^0.16.4",
 		"babel-eslint": "^10.1.0",
 		"eslint": "7.21.0",
 		"eslint-config-airbnb": "18.2.1",
@@ -71,7 +73,8 @@
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.20",
-		"prettier": "^2.2.1"
+		"prettier": "^2.2.1",
+		"typescript": "^4.6.4"
 	},
 	"keywords": [
 		"dhravya",
