--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
 		"gatsby-plugin-emotion": "^6.0.0",
 		"gatsby-plugin-feed": "^3.0.0",
 		"gatsby-plugin-feed-mdx": "^1.1.0",
-		"gatsby-plugin-google-analytics": "^3.2.0",
-		"gatsby-plugin-google-gtag": "^3.12.0",
 		"gatsby-plugin-image": "^1.0.0",
 		"gatsby-plugin-manifest": "^3.0.0",
 		"gatsby-plugin-mdx": "^1.10.1",
@@ -38,6 +36,7 @@
 		"gatsby-plugin-scroll-indicator": "^1.0.1",
 		"gatsby-plugin-sharp": "^3.0.0",
 		"gatsby-plugin-typography": "^3.0.0",
+		"gatsby-plugin-umami": "^0.1.3",
 		"gatsby-remark-copy-linked-files": "^3.0.0",
 		"gatsby-remark-external-links": "^0.0.4",
 		"gatsby-remark-images": "^4.0.0",
@@ -46,7 +45,6 @@
 		"gatsby-remark-responsive-iframe": "^3.0.0",
 		"gatsby-remark-smartypants": "^3.0.0",
 		"gatsby-source-filesystem": "^3.0.0",
-		"gatsby-source-notion-api": "^0.11.0",
 		"gatsby-source-twitter": "^4.0.1",
 		"gatsby-transformer-sharp": "^3.0.0",
 		"mdx-embed": "^1.0.0",
