--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"gatsby-source-twitter": "^4.0.1",
 		"gatsby-transformer-sharp": "^3.0.0",
 		"mdx-embed": "^1.0.0",
+		"node-fetch": "^2.6.7",
 		"path": "^0.12.7",
 		"prismjs": "^1.23.0",
 		"prop-types": "^15.7.2",
